Everything: done, bug & error checking

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6993,7 +6993,7 @@ fieldset[disabled] .btn {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   margin-bottom: 10px;
-  background-color: #1a74a3;
+  background-color: #cc9021;
   position: relative;
 }
 .box-tool-utilities .buttons i {
