--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
@@ -49,7 +49,8 @@
         </div>
     </div>
     <div class="col-xs-12 col-sm-6">
-      https://www.google.com/search?biw=1280&bih=910&sz=0&tbm=lcl&sxsrf=ALeKk03EURqBfMoHOfZT2ic-tB9VaFckWg%3A1604993002668&ei=6j-qX4OhKMvXhwPEvZfwAQ&q=shinhan+bank+%C4%91%E1%BB%8Ba+ch%E1%BB%89&oq=shinhan+bank+%C4%91%E1%BB%8Ba+ch%E1%BB%89&gs_l=psy-ab.3..0j0i22i30k1l5.30980.37297.0.37593.41.23.9.0.0.0.223.2475.0j16j2.18.0....0...1c.1.64.psy-ab..16.25.2301...38j0i67k1j0i433k1j0i433i131k1j35i39k1j35i39i19k1j0i433i131i67k1j0i433i10k1j46i10k1j0i10k1j0i203k1j33i160k1.0.kWuSSWsNKMg#rlfi=hd:;si:;mv:[[10.8352167,106.7597756],[10.719214299999999,106.6102918]]</div>
+      <img src="/public/image/map.png">
+      </div>
 </div>
      </div>
          
