--- a/views/infor.handlebars
+++ b/views/infor.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
