--- a/views/rut-tien-td.handlebars
+++ b/views/rut-tien-td.handlebars
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="/home"><i class="icon-home"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
@@ -57,7 +57,7 @@
 <p><span style="color: #e03e2d;"><span style="color: #000000;">         Nhân viên ngân hàng sẽ đến tận nơi để hướng dẫn và hoàn thiện thủ tục chuyển đổi trả góp cho bạn chỉ trong 5 phút</span></span></p>
 <p><span style="color: #e03e2d;"><span style="color: #000000;">         Điều quan trọng là không mất phí rút tiền .</span></span></p>
 <p><span style="color: #e03e2d;"><span style="color: #000000;">Hãy gọi ngay cho nhân viên Ngân hàng để được hỗ trợ .</span></span></p>
-<div class="wrap-tempale-bon row"><a class="btn-tempale" href="#"> Liên Hệ Tư Vấn  : MR phong 0707183645 zalo : 0934754919</a></div>
+<div class="wrap-tempale-bon row"><a class="btn-tempale" href="#"> Liên Hệ Tư Vấn  : MR.Bằng 0707183645 zalo : 0707183645</a></div>
 <p><span style="color: #e03e2d;">         </span></p>              
             </div>
             
