--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
@@ -24,7 +24,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/thoa-trai-nghiem">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/279cf4dee50aae9998c6ec8e87e25e59.jpg" src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+                <img class="lazy" data-original="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
                 </a>
                 
                 </div>
@@ -40,7 +40,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/tung-bung-khai-truong">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/bd6eaab62077069666f51a3d203f2f2a.jpg" src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" alt="Tưng bừng khai trương, nhận nghìn quà tặng" title="Tưng bừng khai trương, nhận nghìn quà tặng">
+                <img class="lazy" data-original="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" alt="Tưng bừng khai trương, nhận nghìn quà tặng" title="Tưng bừng khai trương, nhận nghìn quà tặng">
                 </a>
                 
                 </div>
@@ -56,7 +56,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/quy-khach-se-de-dang">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/a249c6cb182ab86936dba6f1d289692e.jpg" src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+                <img class="lazy" data-original="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
                 </a>
                 
                 </div>
@@ -72,7 +72,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/niem-tin-cua-nd">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/34e6bd2320923ac2c0ef7e6189a20833.jpg" src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
+                <img class="lazy" data-original="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
                 </a>
                 
                 </div>
@@ -88,7 +88,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/vay-tin-chap-vay-tieu-dung">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/a188add40d415a128d9b4ffbdb68f632.JPG" src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+                <img class="lazy" data-original="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
                 </a>
                 
                 </div>
@@ -104,7 +104,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/vay-tin-chap">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/ab03c4fdadadd4157f0073850ce3d832.png" src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png" alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+                <img class="lazy" data-original="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
                 </a>
                 
                 </div>
@@ -120,7 +120,7 @@
                 <div class="blog-item">
                 <div class="blog-img">
                 <a href="/rut-tien-td">
-                <img class="lazy" data-original="https://shinhanbankvay24h.com.vn/upload/product/3b05f83f529e3602eef89682a41678db.jpg" src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+                <img class="lazy" data-original="/public/image/3b05f83f529e3602eef89682a41678db.jpg" src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
                 </a>
                 
                 </div>
