--- a/views/niem-tin-cua-nguoidung.handlebars
+++ b/views/niem-tin-cua-nguoidung.handlebars
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="/home"><i class="icon-home"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
