--- a/views/support.handlebars
+++ b/views/support.handlebars
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="breadcrumb">
-                  <!-- <a href=""><i class="icon-home"></i> Trang Chủ</a>
+                  <!-- <a href=""><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                            <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                        <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
                        
@@ -51,7 +51,7 @@
 </ul>
 <p><img src="/ho-tro-cong-nhan-va-tu-doanh/../../source/hinh%20anh%20shinhan%20(1).jpg" alt="hinh anh shinhan (1)" width="574" height="337" /></p>
 <p>Nhanh Tay Đăng Kí Ngay để được Ngân Hàng Shinhanbank hỗ trợ </p>
-<p>Liên Hệ : MR . Phong  SĐT :0707183645 , Zalo : 0934754919</p>
+<p>Liên Hệ : Mr.Bằng SĐT :0707183645 , Zalo : 0707183645</p>
 <p><a href="../../"><span style="color: #3598db;"><strong>BẤM VÀO ĐÂY ĐỂ ĐĂNG KÍ KHOẢN VAY</strong></span></a></p>
 </div>					</div>
  </div>
