--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -90,19 +90,19 @@
 <div class="list-item-required">
 <div class="item col-sm-6 col-xs-12">
 <div class="box">
-<h4>ĐĂNG KÍ VAY TẠI <span style="background-color: #e03e2d;"><a style="background-color: #e03e2d;" href="/home">ĐÂY</a></span></h4>
+<h4>ĐĂNG KÍ VAY TẠI <span style="background-color: 'black';font-weight:'bold';font-size:28px"><a style="background-color;font-weight:'bold'" href="/home">ĐÂY</a></span></h4>
 <p> </p>
-<p>            BẢNG TÍNH CHI TIẾT KHOẢN ĐÓNG HẰNG THÁNG</p>
-<p><img src="/public/image/LAI-SUAT-Q2-1.jpg" alt="" width="1055" height="1008" /></p>
 </div>
 </div>
 </div>
 </div>
 </div>
 </div>
+<p style="text-align: center;"><em><img src="/public/image/IMG_0005_Original.jpg" alt="" width="771" height="758" /></em></p>
 </div>
 </div>
 </div>
+
 <div class="col-md-3 col-sm-12 col-xs-12">
 <div class="widget-ct widget-categories mb-30">
 <div class="widget-s-title">
