--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,5 +1,6 @@
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.js"></script>
 
 <div class="page-header">
     <div class="container">
@@ -49,7 +50,9 @@
         </div>
     </div>
     <div class="col-xs-12 col-sm-6">
-      <img src="/public/image/map.png">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.133635067979!2d106.658652414468!3d10.801075461692529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175292db3ef3599%3A0x8215e66b758431f8!2sShinhan%20Bank%20CCPL%20Vay%20t%C3%ADn%20ch%E1%BA%A5p!5e0!3m2!1svi!2s!4v1605188113265!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</iframe>
+</div>
       </div>
 </div>
      </div>
@@ -90,6 +93,7 @@
    </div>
 </div>
 <div class="header-border-bottom">
+    
  
 </div>
 <footer class="section">
@@ -123,12 +127,7 @@
 </div>
 </footer>
 <div class="website" style="    background-color: #f1f1f1;color:#1b1b1b;font-size: 15px;padding: 7px 0px;">
-<div class="container">
-    <div class="row">
-        Bản Quyền Thuộc Về shinhanbankvay24h.com.vn | Cung Cấp Bởi Hodyweb.com
-    </div>
-    
-</div>
+
 </div>
  <div class="modal fade"  id="modalsanpham"  tabindex="-1" role="dialog" aria-labelledby="demoModal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered  modal-lg  " role="document">
