update http method

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,7 +1,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.js"></script>
-
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 <div class="page-header">
     <div class="container">
         <div class="row">
