--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -1,3 +1,4 @@
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 <div class="page-header">
     <div class="container">
         <div class="row">
