test sync heroku with git

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -282,6 +282,7 @@ $('.sotienvay').divide({delimiter: ',',
  });
  
  $(function() {
+     console.log("test testse")
      $("img.lazy").lazyload({
              effect : "fadeIn",
              threshold:100,
