--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,16 +11,16 @@
 <meta name='revisit-after' content='1 days' />
 <meta http-equiv="content-language" content="vi" />
 <!-- facebook -->
-<meta property="og:url"                content="http://shinhanbankvay24h.com.vn/" />
+<meta property="og:url"                content="/home" />
 <meta property="og:type"               content="article" />
-<meta property="og:title"              content="Vay Tin Chấp Shinhanbank - shinhanbankvay24h.com.vn"/>
+<meta property="og:title"              content="Vay Tin Chấp Shinhanbank"/>
 <meta property="og:description"        content=" Shinhanbank hỗ trợ vay tín chấp với lãi suất cực kì ưu đãi chỉ từ 0.6% / 1 tháng , ưu đãi lãi suất cho giáo viên và nhân viên lương cao, khoản vay cao từ 50 đến 900 tr."/>
-<meta property="og:image"              content="https://shinhanbankvay24h.com.vn/upload/seo/70a90db03b38483c9ba08f2d9f723fe8.jpg" />
+<meta property="og:image"              content="/public/upload/70a90db03b38483c9ba08f2d9f723fe8.jpg" />
 
 <title>Vay Tin Chấp Shinhanbank - shinhanbankvay24h.com.vn</title>
 <link rel="stylesheet" href="/public/css/owl.carousel.css" type="text/css">
 <link rel="stylesheet" href="/public/css/owl.theme.css" type="text/css">
-<link rel="shortcut icon" href="https://shinhanbankvay24h.com.vn/upload/logo/d03043f4108131a3e2744d472056fe70.png" type="image/x-icon" />
+<link rel="shortcut icon" href="/public/image/d03043f4108131a3e2744d472056fe70.png" type="image/x-icon" />
 <!-- css new -->
  <link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="/public/css/bootstrap-select.min.css" type="text/css">
@@ -89,8 +89,8 @@
 <div class="row">
 <div class="col-lg-2">
    <div class="logo-top">
- <a href="https://shinhanbankvay24h.com.vn/">
-   <img src="https://shinhanbankvay24h.com.vn/upload/logo/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
+ <a href="/home">
+   <img src="/public/image/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
  </a>
 </div>
 <div class="clear"></div>
@@ -169,8 +169,8 @@ Liên Hệ
 <!-- giao diện menu mobile -->
 <div class="show-mobile click-menu-mobile">
     <span class="logo-mobile">
-	   <a href="https://shinhanbankvay24h.com.vn/">
-        <img src="https://shinhanbankvay24h.com.vn/upload/logo/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
+	   <a href="/home">
+        <img src="/public/image/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
       </a>
 	</span>
 	<span class="icon-bar-mobile">
@@ -274,11 +274,11 @@ $('.sotienvay').divide({delimiter: ',',
 //lazyload
  $("img.lazy" ).each(function(){
      $(this).attr("data-original", $(this).attr("src"));
-     $(this).attr("src","https://shinhanbankvay24h.com.vn/upload/icon/loadingpage.jpg");
+     $(this).attr("src","/public/image/loadingpage.jpg");
  });
  $("img.lazyleft" ).each(function(){
      $(this).attr("data-original", $(this).attr("src"));
-     $(this).attr("src",'https://shinhanbankvay24h.com.vn/upload/icon/loadingpage.jpg');
+     $(this).attr("src",'/public/image/loadingpage.jpg');
  });
  
  $(function() {
