--- a/views/thoa-trai-nghiem.handlebars
+++ b/views/thoa-trai-nghiem.handlebars
@@ -8,7 +8,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
@@ -129,10 +129,10 @@
     <h4>SẢN PHẨM DỊCH VỤ SHINHANBANK</h4>
     </div>
     <ul id="accordion-category" class="product-cat">
-          <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-         <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+          <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+         <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+         <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+         <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
        
     </ul>
 </div>
@@ -302,10 +302,10 @@
 <div class="col-md-3 col-sm-6">
 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
 <ul>
-      <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+      <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+     <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
 </ul>
   </div>
@@ -393,7 +393,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form  method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
