--- a/views/mortgage.handlebars
+++ b/views/mortgage.handlebars
@@ -8,7 +8,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
+                   <a href="/home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
                                            <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                        <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
                        
@@ -27,7 +27,7 @@
 					<div class="content-dichvu">
 					   <div id="gioi-thieu" class="box-type row">
 <div class="ct-left col-sm-4 col-xs-12">
-<h3 class="title-blue"><img src="/public/image/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
+<h3 class="title-blue"><img src="/public/image/hinhanhshinhan.jpg" alt="" width="492" height="289" /></h3>
 <h3 class="title-blue">Giới thiệu</h3>
 </div>
 <div class="ct-right col-sm-8 col-xs-12">
@@ -436,7 +436,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
