--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 <meta property="og:description"        content=" Shinhanbank hỗ trợ vay tín chấp với lãi suất cực kì ưu đãi chỉ từ 0.6% / 1 tháng , ưu đãi lãi suất cho giáo viên và nhân viên lương cao, khoản vay cao từ 50 đến 900 tr."/>
 <meta property="og:image"              content="/public/upload/70a90db03b38483c9ba08f2d9f723fe8.jpg" />
 
-<title>Vay Tin Chấp Shinhanbank - shinhanbankvay24h.com.vn</title>
+<title>Vay Tin Chấp Shinhanbank</title>
 <link rel="stylesheet" href="/public/css/owl.carousel.css" type="text/css">
 <link rel="stylesheet" href="/public/css/owl.theme.css" type="text/css">
 <link rel="shortcut icon" href="/public/image/d03043f4108131a3e2744d472056fe70.png" type="image/x-icon" />
@@ -278,7 +278,7 @@ $('.sotienvay').divide({delimiter: ',',
  });
  $("img.lazyleft" ).each(function(){
      $(this).attr("data-original", $(this).attr("src"));
-     $(this).attr("src",'/public/image/loadingpage.jpg');
+     $(this).attr("src",'/public/upload/loadingpage.jpg');
  });
  
  $(function() {
