--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,8 +23,19 @@
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
          <div class="row">
     <div class="col-lg-12">
-        <div class="wrap-contact" style="margin: 16px 0px;text-align: center;">
-        <p>Liên hệ Mr.Bằng - SDT:0707183645 - Zalo:0707183645</p></div>
+        <div class="wrap-contact">
+            <div class="card">
+                <div class="card-body" style="color:#f1f1f1;text-align: center; background: #36D1DC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #5B86E5, #36D1DC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #5B86E5, #36D1DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
+                    <p style="margin-left:1%">
+                    <i class="fa fa-user" aria-hidden="true"></i> Mr.Bằng &nbsp; &nbsp;
+                    <i class="fa fa-phone" aria-hidden="true"></i> SDT:0707183645 &nbsp; &nbsp;
+                    <i class="fa fa-mobile" aria-hidden="true"></i> Zalo:0707183645 &nbsp; &nbsp;</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div class="row" style="margin-top: 21px">
