--- a/views/tung-bung-khai-truong.handlebars
+++ b/views/tung-bung-khai-truong.handlebars
@@ -105,7 +105,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.jpg" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
 					     </a>
 				    </div>
 				   <div class="name-right">
@@ -173,7 +173,7 @@
 				<div class="loop-blog">
 					<div class="thumb-left">
 						<a href="/vay-tin-chap">
-	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.jpg" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
