--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -354,6 +354,51 @@
     </div>
 </div>
 
+<div class="wrap-footer-text group">
+    <div class="container">
+        <div class="row">
+            <div class="title-text-vaytindung title-mr-70">
+                <h2>QUY TRÌNH THỰC HIỆN KHOẢN VAY</h2>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
+                <div class="item equalize">
+                    <img style="margin-bottom:5%"src="/public/image/step1.png" alt="ảnh 1">
+                    <span class="title">1. Đăng ký vay</span>
+                    <p class="text">
+                        Hoàn tất bằng cách điền hết thông tin trong form trong vòng 1 phút </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
+                <div class="item equalize">
+                     <img style="margin-bottom:5%"src="/public/image/step2.png" alt="ảnh 2">
+                    <span class="title">2. Nộp hồ sơ</span>
+                    <p class="text">
+                        Ngay lập tức nhân viên sẽ đến tư vấn và nhận hồ sơ của bạn </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
+                <div class="item equalize">
+                     <img style="margin-bottom:5%"src="/public/image/step3.png" alt="ảnh 3">
+                    <span class="title">3. Xét duyệt</span>
+                    <p class="text">
+                        Nhận kết quả nhanh chóng sau khi nhận hồ sơ </p>
+                </div>
+            </div>
+               <div class="col-md-3 col-sm-6 col-xs-12 paddingweb">
+                <div class="item equalize">
+                     <img style="margin-bottom:5%"src="/public/image/step4.png" alt="ảnh 4">
+                    <span class="title">4. Nhận tiền</span>
+                    <p class="text">
+                        Tiền sẽ được chuyển vào tài khoản của bạn hoặc nhận tiền mặt </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <br>
+</div>
+
 
 <div class="wrap-footer-text group">
     <div class="container">
