Logo deleted, Remove all news page

--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -153,276 +153,26 @@
 <p>- Thu nhập bình quân phải đáp ứng mức tối thiểu tại của mỗi loại thẻ, thấp nhất là 6 triệu VND/ tháng </p>
 <p> </p>
 <p>- Có thêm giấy chứng nhận làm việc 3 tháng trở lên như: hợp đồng lao động, sao kê tài khoản lương, ...<br /> </p>
-<p> </p>
-<p><strong>&gt;&gt;&gt;&gt; Xem thêm: <a href="https://topbank.vn/tu-van/7-luu-y-can-ghi-nho-sau-khi-lam-the-tin-dung-np20180522161028976" target="_blank" rel="noopener"><em>7 lưu ý cần ghi nhớ sau khi làm thẻ tín dụng</em></a></strong></p>
-<p> </p>
 <p>Trên đây là thông tin chi tiết về <strong>Ưu đãi thẻ tín dụng Shinhan bank - tận hưởng cực nhiều tiện ích</strong> , hi vọng hữu ích với bạn đọc trong việc tham khảo, chuẩn bị giấy tờ cần thiết để tiến hành sử dụng mở thẻ Shinhan bank dễ dàng. Khách hàng có nhu cầu mở thẻ tín dụng Shinhan Bank có thể liên hệ trực tiếp với <a href="https://topbank.vn/" target="_blank" rel="noopener"><em><strong>Topbank.vn</strong></em></a> qua<strong> hotline </strong>:<a class="blue-clr" href="tel: 02437822888" target="_blank" rel="nofollow noopener"><strong>024 378 22 888</strong> </a>để được tư vấn, hỗ trợ miễn phí.</p>
 <p> </p>
 <div class="author">Theo tin tức ngân hàng</div>
 </div>
-<div class="full-width text-center mb-15"><a class="button-consultant" href="https://topbank.vn/dang-ky-tu-van">ĐĂNG KÝ TƯ VẤN VAY TRẢ GÓP </a></div>
-<div class="tag"><strong class="mr-10">Từ khóa nổi bật</strong> <a href="https://topbank.vn/the-tin-dung-shinhanbank-tagid67">thẻ tín dụng Shinhanbank</a> <a href="https://topbank.vn/the-tin-dung-tagid4">thẻ tín dụng</a> <a href="https://topbank.vn/uu-dai-the-tin-dung-tagid11">ưu đãi thẻ tín dụng</a> <a href="https://topbank.vn/mo-the-tin-dung-tagid105">mở thẻ tín dụng</a> <a href="https://topbank.vn/uu-dai-the-tin-dung-shinhanbank-tagid80">ưu đãi thẻ tín dụng Shinhanbank</a></div>
 </div>
 </div>
 <div class="c-column">
-<h2 class="heading fonts-24 text-left mb-20 mt-30 pdt-15">Tư vấn khoản vay</h2>
+
  
-<div class="box-loan-counseling">
-<p class="no-margin">Bạn đang có nhu cầu vay mua nhà/xe/ vay tín chấp trả góp? Vui lòng điền các thông tin bên dưới để Topbank.vn liên hệ tư vấn cho bạn những vay ưu đãi với thời gian sớm nhất!</p>
-<div id="consulantants-box">
-<ul class="list mt-18">
-<li><input id="CustomerName" class="input-text input-form-control" name="CustomerName" type="text" placeholder="Họ tên" /></li>
-<li><input id="CustomerPhone" class="input-text input-form-control input-int mobile" name="CustomerPhone" type="text" placeholder="Số điện thoại" /></li>
-<li><input id="CustomerEmail" class="input-text input-form-control" name="CustomerEmail" type="text" placeholder="Email" /></li>
-<li><select id="CbProvinceId" class="chosen-select" name="ProvinceId" data-val="true" data-val-number="The field ProvinceId must be a number." data-val-required="The ProvinceId field is required.">
-<option selected="selected" value="1">Hà Nội</option>
- 
-<option value="2">TP.HCM</option>
- 
-<option value="16">Đà Nẵng</option>
- 
-<option value="24">Hải Phòng</option>
- 
-<option value="13">Cần Thơ</option>
- 
-<option value="3">An Giang</option>
- 
-<option value="4">Bắc Ninh</option>
- 
-<option value="5">Bạc Liêu</option>
- 
-<option value="6">Bình Dương</option>
- 
-<option value="7">Bình Phước</option>
- 
-<option value="8">Bình Thuận</option>
- 
-<option value="9">Bình Định</option>
- 
-<option value="10">Bắc Cạn</option>
- 
-<option value="11">Bắc Giang</option>
- 
-<option value="12">Bến Tre</option>
- 
-<option value="14">Cà Mau</option>
- 
-<option value="15">Cao Bằng</option>
- 
-<option value="17">Đồng Nai</option>
- 
-<option value="18">Đồng Tháp</option>
- 
-<option value="19">Đăk Lăk</option>
- 
-<option value="20">Đăk Nông</option>
- 
-<option value="21">Điện Biên</option>
- 
-<option value="22">Gia Lai</option>
- 
-<option value="23">Hưng Yên</option>
- 
-<option value="25">Hải Dương</option>
- 
-<option value="26">Hà Nam</option>
- 
-<option value="27">Hà Giang</option>
- 
-<option value="28">Hà Tĩnh</option>
- 
-<option value="29">Hậu Giang</option>
- 
-<option value="30">Hòa Bình</option>
- 
-<option value="31">Kiên Giang</option>
- 
-<option value="32">Khánh Hòa</option>
- 
-<option value="33">Kon Tum</option>
- 
-<option value="34">Long An</option>
- 
-<option value="35">Lạng Sơn</option>
- 
-<option value="36">Lâm Đồng</option>
- 
-<option value="37">Lào Cai</option>
- 
-<option value="38">Lai Châu</option>
- 
-<option value="39">Nghệ An</option>
- 
-<option value="40">Ninh Bình</option>
- 
-<option value="41">Ninh Thuận</option>
- 
-<option value="42">Nam Định</option>
- 
-<option value="43">Phú Thọ</option>
- 
-<option value="44">Phú Yên</option>
- 
-<option value="45">Quảng Nam</option>
- 
-<option value="46">Quảng Ninh</option>
- 
-<option value="47">Quảng Ngãi</option>
- 
-<option value="48">Quảng Bình</option>
- 
-<option value="49">Quảng Trị</option>
- 
-<option value="50">Sơn La</option>
- 
-<option value="51">Sóc Trăng</option>
- 
-<option value="52">Tây Ninh</option>
- 
-<option value="53">Thái Nguyên</option>
- 
-<option value="54">Thừa Thiên Huế</option>
- 
-<option value="55">Tiền Giang</option>
- 
-<option value="56">Thái Bình</option>
- 
-<option value="57">Thanh Hóa</option>
- 
-<option value="58">Trà Vinh</option>
- 
-<option value="59">Tuyên Quang</option>
- 
-<option value="60">Vĩnh Phúc</option>
- 
-<option value="61">Vĩnh Long</option>
- 
-<option value="62">Vũng Tàu</option>
- 
-<option value="63">Yên Bái</option>
- </select>
-<div id="CbProvinceId_chosen" class="chosen-container chosen-container-single" title=""><a class="chosen-single">Hà Nội</a>
-<div> </div>
-<div class="chosen-drop">
-<div class="chosen-search"><input autocomplete="off" type="text" /></div>
 </div>
 </div>
-</li>
-<li><select id="CbProduct" class="chosen-select disable_search" name="ProductType" data-val="true" data-val-number="The field ProductType must be a number." data-val-required="The ProductType field is required.">
-<option selected="selected" value="0">Chọn sản phẩm</option>
- 
-<option value="1">Vay mua ô tô</option>
- 
-<option value="2">Vay mua nhà, đất/vay thế chấp nhà</option>
- 
-<option value="3">Vay tín chấp</option>
- 
-<option value="4">Mở thẻ tín dụng</option>
- </select>
-<div id="CbProduct_chosen" class="chosen-container chosen-container-single chosen-container-single-nosearch" title=""><a class="chosen-single">Chọn sản phẩm</a>
-<div> </div>
-<div class="chosen-drop">
-<div class="chosen-search"><input autocomplete="off" readonly="readonly" type="text" /></div>
+</div>					
 </div>
-</div>
-</li>
-<li class="mt-10"><button id="btnConsultantSubmit" class="button-s full-width">Nhận tư vấn</button></li>
-</ul>
-</div>
-</div>
-<div class="mt-35 float-left"> </div>
-<h3 class="heading fonts-24 text-left  mb-20 mt-35 line-height-32">Bài viết được quan tâm</h3>
- 
-<ul class="list-new-small">
-<li>
-<div class="photo"><a title="Lãi suất vay tín chấp Eximbank 2020 cập nhật chi tiết" href="https://topbank.vn/tu-van/lai-suat-vay-tin-chap-eximbank"><img src="https://img.topbank.vn/crop/360x270/2018/09/25/pXubIXvx/ngan-hang-eximbank--5e2f.jpg" alt="https://img.topbank.vn/crop/360x270/2018/09/25/pXubIXvx/ngan-hang-eximbank--5e2f.jpg" /></a></div>
-<div class="content-small">
-<p class="title">Lãi suất vay tín chấp eximbank 2020 cập nhật chi tiết</p>
-</div>
-</li>
-<li>
-<div class="photo"><a title="Lãi suất gửi tiết kiệm ngân hàng MBBank tháng 5/2020" href="https://topbank.vn/tu-van/lai-suat-gui-tiet-kiem-ngan-hang-mbbank"><img src="https://img.topbank.vn/crop/360x270/2018/10/31/zoXeBVdi/lai-suat-gui-tiet-ki-fa9b.jpg" alt="https://img.topbank.vn/crop/360x270/2018/10/31/zoXeBVdi/lai-suat-gui-tiet-ki-fa9b.jpg" /></a></div>
-<div class="content-small">
-<p class="title">Lãi suất gửi tiết kiệm ngân hàng mbbank tháng 5/2020</p>
-</div>
-</li>
-<li>
-<div class="photo"><a title="Lãi suất gửi tiền tiết kiệm tại ngân hàng BIDV năm 2020 là bao nhiêu?" href="https://topbank.vn/tu-van/lai-suat-gui-tien-tiet-kiem-tai-ngan-hang-bidv-nam-2018-la-bao-nhieu"><img src="https://img.topbank.vn/crop/360x270/2018/04/20/jDFnkIeH/gui-tiet-kiem-bidv-54a1.png" alt="https://img.topbank.vn/crop/360x270/2018/04/20/jDFnkIeH/gui-tiet-kiem-bidv-54a1.png" /></a></div>
-<div class="content-small">
-<p class="title">Lãi suất gửi tiền tiết kiệm tại ngân hàng bidv năm 2020 là ...</p>
-</div>
-</li>
-<li>
-<div class="photo"><a title="Cập nhật lãi suất ngân hàng Agribank mới nhất 2020" href="https://topbank.vn/tu-van/lai-suat-ngan-hang-agribank"><img src="https://img.topbank.vn/crop/360x270/2018/06/13/zoXeBVdi/lai-suat-ngan-hang-a-2cba.jpg" alt="https://img.topbank.vn/crop/360x270/2018/06/13/zoXeBVdi/lai-suat-ngan-hang-a-2cba.jpg" /></a></div>
-<div class="content-small">
-<p class="title">Cập nhật lãi suất ngân hàng agribank mới nhất 2020</p>
-</div>
-</li>
-<li>
-<div class="photo"><a title="Lãi suất gửi tiết kiệm Vietinbank cập nhật tháng 6/2020" href="https://topbank.vn/tu-van/lai-suat-gui-tiet-kiem-vietinbank-cap-nhat-moi-nhat-2018"><img src="https://img.topbank.vn/crop/360x270/2018/08/03/jDFnkIeH/ngan-hang-viettinban-94e2.jpg" alt="https://img.topbank.vn/crop/360x270/2018/08/03/jDFnkIeH/ngan-hang-viettinban-94e2.jpg" /></a></div>
-<div class="content-small">
-<p class="title">Lãi suất gửi tiết kiệm vietinbank cập nhật tháng 6/2020</p>
-</div>
-</li>
-</ul>
-<h2 class="heading fonts-24 text-left  mb-20 mt-35 line-height-32">Chủ đề được quan tâm</h2>
- 
-<div class="box-topic-interest">
-<h3 class="title "><a title="Vay mua nhà" href="https://topbank.vn/tu-van/vay-mua-nha">Vay mua nhà</a></h3>
-<h3 class="title "><a title="Vay mua xe" href="https://topbank.vn/tu-van/vay-mua-xe">Vay mua xe</a></h3>
-<h3 class="title "><a title="Vay tiêu dùng" href="https://topbank.vn/tu-van/vay-tieu-dung">Vay tiêu dùng</a></h3>
-<h3 class="title "><a title="Thẻ tín dụng" href="https://topbank.vn/tu-van/the-tin-dung">Thẻ tín dụng</a></h3>
-<h3 class="title "><a title="Gửi tiết kiệm" href="https://topbank.vn/tu-van/gui-tiet-kiem">Gửi tiết kiệm</a></h3>
-<h3 class="title "><a title="Thanh toán" href="https://topbank.vn/tu-van/thanh-toan">Thanh toán</a></h3>
-<h3 class="title "><a title="Bảo hiểm" href="https://topbank.vn/tu-van/bao-hiem">Bảo hiểm</a></h3>
-</div>
-<h2 class="heading fonts-24 text-left  mb-20 mt-35 line-height-32">Lãi suất ngân hàng</h2>
- 
-<ul class="list-item right-list">
-<li>
-<h3 class="font-normal"><a title="Cập nhật lãi suất vay ngân hàng mới nhất tháng 6/2020" href="https://topbank.vn/tu-van/lai-suat-vay-ngan-hang">Cập nhật lãi suất vay ngân hàng mới nhất tháng 6/2020</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất ngân hàng Vietcombank mới nhất 2020" href="https://topbank.vn/tu-van/lai-suat-ngan-hang-vietcombank">Lãi suất ngân hàng Vietcombank mới nhất 2020</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất ngân hàng BIDV năm 2019 cập nhật mới nhất" href="https://topbank.vn/tu-van/lai-suat-ngan-hang-bidv-nam-2018-cap-nhat-moi-nhat">Lãi suất ngân hàng BIDV năm 2019 cập nhật mới nhất</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Cập nhật lãi suất ngân hàng Techcombank mới tháng 6/2020" href="https://topbank.vn/tu-van/lai-suat-ngan-hang-techcombank">Cập nhật lãi suất ngân hàng Techcombank mới tháng 6/2020</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất ngân hàng VPBank tháng 6/2020 cập nhật mới nhất" href="https://topbank.vn/tu-van/lai-suat-ngan-hang-vpbank">Lãi suất ngân hàng VPBank tháng 6/2020 cập nhật mới nhất</a></h3>
-</li>
-</ul>
-<h2 class="heading fonts-24 text-left  mb-20 mt-35 line-height-32">Ngân hàng tiêu biểu</h2>
-<ul class="list-item right-list">
-<li>
-<h3 class="font-normal"><a title="Lãi suất vay mua nhà Vietcombank tháng 7/2020 đầy đủ, chính xác nhất" href="https://topbank.vn/tu-van/lai-suat-vay-mua-nha-vietcombank">Lãi suất vay mua nhà Vietcombank tháng 7/2020 đầy đủ, chính xác nhất</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất vay mua nhà VPBank tháng 5/2020 - Mua nhà với lãi suất chỉ từ 8.5%/năm" href="https://topbank.vn/tu-van/lai-suat-vay-mua-nha-vpbank">Lãi suất vay mua nhà VPBank tháng 5/2020 - Mua nhà với lãi suất chỉ từ 8.5%/năm</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất vay mua nhà Techcombank tháng 6/2020 - Cập nhật mới nhất" href="https://topbank.vn/tu-van/lai-suat-vay-mua-nha-techcombank">Lãi suất vay mua nhà Techcombank tháng 6/2020 - Cập nhật mới nhất</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Lãi suất vay mua xe Shinhanbank tháng 7/2020 mới nhất hiện nay" href="https://topbank.vn/tu-van/lai-suat-vay-mua-xe-o-to-Shinhanbank">Lãi suất vay mua xe Shinhanbank tháng 7/2020 mới nhất hiện nay</a></h3>
-</li>
-<li>
-<h3 class="font-normal"><a title="Hạn mức và lãi suất vay mua xe ngân hàng Eximbank" href="https://topbank.vn/tu-van/han-muc-va-lai-suat-vay-mua-xe-mua-o-to-ngan-hang-eximbank">Hạn mức và lãi suất vay mua xe ngân hàng Eximbank</a></h3>
-</li>
-</ul>
-</div>
-</div>
-</div>					</div>
  </div>
       </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
        
 <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
     <div class="widget-s-title">
-    <h4>SẢN PHẨM DỊCH VỤ SHINHANBANK</h4>
+    <h4>SẢN PHẨM DỊCH VỤ</h4>
     </div>
     <ul id="accordion-category" class="product-cat">
           <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
@@ -432,129 +182,6 @@
        
     </ul>
 </div>
-      
-       <div class="title-news">Tin Liên Quan</div>
-    <div class="aside-content">
-         			<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/vay-tin-chap-vay-tieu-dung">
-	                           <img src="/public/image/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/vay-tin-chap-vay-tieu-dung" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/tung-bung-khai-truong">
-	                           <img src="/public/image/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/tung-bung-khai-truong" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/vay-tin-chap">
-	                           <img src="/public/image/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/vay-tin-chap" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/rut-tien-td">
-	                           <img src="/public/image/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/rut-tien-td" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/thoa-trai-nghiem">
-	                           <img src="/public/image/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/thoa-trai-nghiem" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/quy-khach-se-de-dang">
-	                           <img src="/public/image/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/quy-khach-se-de-dang" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="/niem-tin-cua-nd">
-	                           <img src="/public/image/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="/niem-tin-cua-nd" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">Niềm tin của người dùng làm nên sức ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-		  </div>
       </div>
 </div>     </div>
          
@@ -607,11 +234,10 @@
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
-<h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
+<h3 class="widget-title">SẢN PHẨM DỊCH VỤ</h3>
 <ul>
       <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
      <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
-
      <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
 </ul>
